fixed paperclips on mobile

--- a/src/components/ArticleCard/ArticleCard.css
+++ b/src/components/ArticleCard/ArticleCard.css
@@ -22,6 +22,12 @@
   z-index: 1;
 }
 
+@media (max-width: 768px) {
+  .paperclip {
+    height: 65px;
+  }
+}
+
 .card-content {
   background: white;
   border-radius: 12px;
